--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
 
+        "yiisoft/yii2-jui": "~2.0.0",
         "yii2mod/yii2-behaviors": "*",
         "yii2mod/yii2-enum": "*",
         "asofter/yii2-imperavi-redactor": "*",
