--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
         "yiisoft/yii2-jui": "~2.0.0",
         "yii2mod/yii2-behaviors": "*",
         "yii2mod/yii2-enum": "*",
-        "asofter/yii2-imperavi-redactor": "*",
-        "paulzi/yii2-adjacency-list": "^2.0",
-        "yii2mod/yii2-moderation": "*"
+        "yii2mod/yii2-moderation": "*",
+        "paulzi/yii2-adjacency-list": "^2.0"
 
     },
     "autoload": {
